// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination component covers test for count is not provided 1`] = `
<div>
  <nav
    aria-label="pagination navigation"
    class="MuiPagination-root"
  >
    <ul
      class="MuiPagination-ul"
    >
      <li>
        <button
          aria-label="Go to previous page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-131 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-current="true"
          aria-label="page 1"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-131 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-selected"
          tabindex="0"
          type="button"
        >
          1
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to next page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-131 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Pagination component renders all buttons without go-to-first, go-to-last double arrow buttons 1`] = `
<div>
  <nav
    aria-label="pagination navigation"
    class="MuiPagination-root"
  >
    <ul
      class="MuiPagination-ul"
    >
      <li>
        <button
          aria-label="Go to previous page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-99 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-current="true"
          aria-label="page 1"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-99 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-selected"
          tabindex="0"
          type="button"
        >
          1
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to page 2"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-99 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          2
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to page 3"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-99 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          3
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to page 4"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-99 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          4
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to page 5"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-99 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          5
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to next page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-99 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Pagination component renders correctly under hideAllPages condition 1`] = `
<div>
  <nav
    aria-label="pagination navigation"
    class="MuiPagination-root"
  >
    <ul
      class="MuiPagination-ul"
    >
      <li>
        <button
          aria-label="Go to previous page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-105 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
        </button>
      </li>
      <li />
      <li />
      <li>
        <button
          aria-label="Go to next page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-105 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Pagination component renders correctly under reducedMode 1`] = `
<div>
  <nav
    aria-label="pagination navigation"
    class="MuiPagination-root"
  >
    <ul
      class="MuiPagination-ul"
    >
      <li>
        <button
          aria-label="Go to first page"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-122 iconButton IconButton-medium-128 IconButton-text-124 Pagination-root-108 Pagination-first-109 MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled Mui-disabled"
          disabled=""
          page="1"
          shape="round"
          tabindex="-1"
          type="first"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              style="font-size: 16px;"
            />
          </span>
        </button>
      </li>
      <li>
        <button
          aria-label="Go to previous page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-108 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-current="true"
          aria-label="page 1"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-108 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-selected"
          tabindex="0"
          type="button"
        >
          1
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li />
      <li />
      <li />
      <li />
      <li>
        <button
          aria-label="Go to next page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-108 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to last page"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-122 iconButton IconButton-medium-128 IconButton-text-124 Pagination-root-108 Pagination-last-110 MuiPaginationItem-root MuiPaginationItem-page"
          page="7"
          shape="round"
          tabindex="0"
          type="last"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              style="font-size: 16px;"
            />
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Pagination component renders with only prev and next buttons 1`] = `
<div>
  <nav
    aria-label="pagination navigation"
    class="MuiPagination-root"
  >
    <ul
      class="MuiPagination-ul"
    >
      <li>
        <button
          aria-label="Go to previous page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-50 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
        </button>
      </li>
      <li />
      <li />
      <li />
      <li />
      <li>
        <button
          aria-label="Go to next page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-50 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Pagination component renders with only prev, next and current page button only 1`] = `
<div>
  <nav
    aria-label="pagination navigation"
    class="MuiPagination-root"
  >
    <ul
      class="MuiPagination-ul"
    >
      <li>
        <button
          aria-label="Go to previous page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-73 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li />
      <li />
      <li>
        <button
          aria-current="true"
          aria-label="page 4"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-73 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-selected"
          tabindex="0"
          type="button"
        >
          4
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li />
      <li />
      <li>
        <button
          aria-label="Go to next page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-73 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Pagination component renders with page buttons, go-to-first, go-to-last double arrow buttons and ellipses with >= 10 pages 1`] = `
<div>
  <nav
    aria-label="pagination navigation"
    class="MuiPagination-root"
  >
    <ul
      class="MuiPagination-ul"
    >
      <li>
        <button
          aria-label="Go to first page"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-41 iconButton IconButton-medium-47 IconButton-text-43 Pagination-root-27 Pagination-first-28 MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled Mui-disabled"
          disabled=""
          page="1"
          shape="round"
          tabindex="-1"
          type="first"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              style="font-size: 16px;"
            />
          </span>
        </button>
      </li>
      <li>
        <button
          aria-label="Go to previous page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-27 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-current="true"
          aria-label="page 1"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-27 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-selected"
          tabindex="0"
          type="button"
        >
          1
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to page 2"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-27 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          2
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to page 3"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-27 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          3
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to page 4"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-27 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          4
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to page 5"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-27 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          5
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <div
          class="Pagination-root-27 MuiPaginationItem-root MuiPaginationItem-ellipsis"
        >
          <svg
            style="font-size: 16px;"
          />
        </div>
      </li>
      <li>
        <button
          aria-label="Go to page 10"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-27 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          10
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to next page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-27 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to last page"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-41 iconButton IconButton-medium-47 IconButton-text-43 Pagination-root-27 Pagination-last-29 MuiPaginationItem-root MuiPaginationItem-page"
          page="10"
          shape="round"
          tabindex="0"
          type="last"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              style="font-size: 16px;"
            />
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Pagination component renders without first and last page buttons 1`] = `
<div>
  <nav
    aria-label="pagination navigation"
    class="MuiPagination-root"
  >
    <ul
      class="MuiPagination-ul"
    >
      <li>
        <button
          aria-label="Go to previous page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-96 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to page 1"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-96 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          1
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to page 2"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-96 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          2
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to page 3"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-96 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          3
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-current="true"
          aria-label="page 4"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-96 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-selected"
          tabindex="0"
          type="button"
        >
          4
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to page 5"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-96 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          5
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to next page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-96 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Pagination component renders without go-to-first, go-to-last double arrow buttons with less than 10 pages 1`] = `
<div>
  <nav
    aria-label="pagination navigation"
    class="MuiPagination-root"
  >
    <ul
      class="MuiPagination-ul"
    >
      <li>
        <button
          aria-label="Go to previous page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-24 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-current="true"
          aria-label="page 1"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-24 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-selected"
          tabindex="0"
          type="button"
        >
          1
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to page 2"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-24 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          2
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to page 3"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-24 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          3
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to page 4"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-24 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          4
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to page 5"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-24 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          5
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to page 6"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-24 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          6
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to page 7"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-24 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          7
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to page 8"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-24 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          8
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to page 9"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-24 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          9
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
      <li>
        <button
          aria-label="Go to next page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-24 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
    </ul>
  </nav>
</div>
`;
